# NeuralNetwork

./: Cargo.toml
src/: activation.rs  layer.rs  lib.rs  network.rs  perceptron.rs
