[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
plotters = "0.3.3"
nannou = "0.19.0"
pyo3 = {version = "0.20.3", features = ["extension-module"]}

[lib]
name = "neural_network_lib"
path = "src/lib.rs"
